--- a/style/Istyle.css
+++ b/style/Istyle.css
@@ -9,7 +9,7 @@ html > body{
     color: #FFFFF0; /* White bone */
     font-family: 'Nunito Sans', 'Nunito', sans-serif;
     font-weight: 600;
-    padding-bottom: 125px;
+    gap: 50px;
 }
 
 html > body > section{
@@ -42,7 +42,9 @@ html > body > section > div > article{
 
 html > body > section > div > article:hover{
     /*border: 2px solid rgba(255, 255, 255, 0.2);*/
-    box-shadow: 0 0 20px 5px #040720;;
+    transform: translateY(-0.25rem);
+    transition: transform .2s ease-in-out;
+    box-shadow: 0 0 20px 5px #040720;
 }
 
 html > body > section > div{
@@ -53,6 +55,7 @@ html > body > section > div{
 
 html > body > section > div > article > h3{
     align-self: center;
+    justify-content: center;
 }
 
 html > body > section > div:nth-child(2){
@@ -73,11 +76,70 @@ strong{
 }
 
 .img{
-    width: 100%;
-    height: 100%;
+    width: 240.0px;
+    height: 160.0px;
     border-radius: 4px 4px 4px 4px;
+}
+
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 0px;
 }
 
 #projets{
     align-items: center;
+}
+
+button {
+    --glow-color: #13218a;
+    --glow-spread-color: #040720;
+    --enhanced-glow-color: #1726a8;
+    --btn-color: #090d35;
+    border: .25em solid var(--glow-color);
+    padding: 1em 3em;
+    color: var(--glow-color);
+    font-size: 15px;
+    font-weight: bold;
+    background-color: var(--btn-color);
+    border-radius: 1em;
+    outline: none;
+    box-shadow: 0 0 1em .25em var(--glow-color),
+           0 0 4em 1em var(--glow-spread-color),
+           inset 0 0 .75em .25em var(--glow-color);
+    text-shadow: 0 0 .5em var(--glow-color);
+    position: relative;
+    transition: all 0.3s;
+}
+ 
+/* glow effect on the bottom*/
+/*
+button::after {
+    pointer-events: none;
+    content: "";
+    position: absolute;
+    top: 120%;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: var(--glow-spread-color);
+    filter: blur(2em);
+    opacity: .7;
+    transform: perspective(1.5em) rotateX(35deg) scale(1, .6);
+}
+*/
+   
+button:hover {
+    color: #FFFFF0;/*var(--btn-color)*/
+    background-color: var(--glow-color);
+    box-shadow: 0 0 1em .25em var(--glow-color),
+           0 0 4em 2em var(--glow-spread-color),
+           inset 0 0 .75em .25em var(--glow-color);
+}
+   
+button:active {
+    box-shadow: 0 0 0.6em .25em var(--glow-color),
+           0 0 2.5em 2em var(--glow-spread-color),
+           inset 0 0 .5em .25em var(--glow-color);
 }
