--- a/style/Cstyle.css
+++ b/style/Cstyle.css
@@ -22,6 +22,10 @@ html > body > section > h1{
 }
 html > body > section > h1 > a{
     text-decoration: none;
+    color: #004dff;
+}
+html > body > section > h1 > a:active{
+    color: -webkit-link;
 }
 .spinner {
     width: 44px;
