--- a/style/Istyle.css
+++ b/style/Istyle.css
@@ -22,6 +22,7 @@ html > body > section{
 html > body > section > h1{
     font-size: 4.5em;
     margin: 0px;
+    font-weight: 900;
 }
 
 html > body > section > p{
@@ -58,61 +59,9 @@ html > body > section > div > article.carteProjets > h3{
     justify-content: center;
 }
 
-.carteProjets{
-    width: 100vh;
-}
-
 strong{
     color: #834aff;
     font-weight: 900;
-}
-
-.accueil{
-    height: 100vh;
-}
-
-.secondaire{
-    height: 25vh;
-}
-
-.img{
-    width: 240.0px;
-    height: 160.0px;
-    border-radius: 4px 4px 4px 4px;
-}
-
-.footer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    bottom: 0px;
-}
-
-.social{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: #1a1a1a;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: background-color .3s ease;
-}
-
-.socialImg{
-    width: 28px;
-    height: 28px;
-}
-
-.carteResau{
-    display: flex;
-    flex-direction: row;
-    width: 200px;
-    gap: 3px;
-
-}
-#projets{
-    align-items: center;
 }
 
 button {
@@ -166,3 +115,60 @@ button:active {
            0 0 2.5em 2em var(--glow-spread-color),
            inset 0 0 .5em .25em var(--glow-color);
 }
+
+.accueil{
+    height: 100vh;
+}
+
+.secondaire{
+    height: 25vh;
+}
+
+.img{
+    width: 240.0px;
+    height: 160.0px;
+    border-radius: 4px 4px 4px 4px;
+}
+
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 0px;
+}
+
+.social{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #1a1a1a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color .3s ease;
+}
+
+.socialImg{
+    width: 28px;
+    height: 28px;
+}
+
+.carteResau{
+    display: flex;
+    flex-direction: row;
+    width: 200px;
+    gap: 8px;
+
+
+}
+
+.carteProjets{
+    width: 100vh;
+}
+
+#projets{
+    align-items: center;
+}
+
+
+
