--- a/style/Cstyle.css
+++ b/style/Cstyle.css
@@ -1,32 +1,39 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600;900&family=Nunito:wght@600;900&display=swap');
+
 html > body{
     display: flex;
     flex-direction: column;
     background-color: #000;
     color: #FFFFF0; /* White bone */
-    font-family: 'Nunito Sans', 'Nunito', sans-serif;
+    font-family: 'Nunito', 'Nunito Sans', sans-serif;
     font-weight: 600;
     justify-content: center;
     height: 75vh;
     width: 100vw;
     gap: 75px;
 }
+
 html > body > section{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
 }
+
 html > body > section > h1{
     font-size: 2.5em;
     margin: 0px;
 }
+
 html > body > section > h1 > a{
     text-decoration: none;
     color: #004dff;
 }
+
 html > body > section > h1 > a:active{
     color: -webkit-link;
 }
+
 .spinner {
     width: 44px;
     height: 44px;
