--- a/style/Istyle.css
+++ b/style/Istyle.css
@@ -38,6 +38,7 @@ html > body > section > div.carteProjets > article{
     max-width: 250px;
     border: 2px solid #040720;
     border-radius: 15px;
+    align-items: center;
 }
 
 html > body > section > div.carteProjets > article:hover{
