--- a/style/Index.css
+++ b/style/Index.css
@@ -16,12 +16,18 @@ html > body > section{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    gap: 25px;
 }
 
 html > body > section > h1{
     font-size: 6.5em;
     margin: 0px;
     font-weight: 700;
+}
+html > body > section > div > h2{
+    font-size: 1.5em;
+    margin: 0px;
+    font-weight: 900;
 }
 
 html > body > section > p{
@@ -39,7 +45,7 @@ html > body > section > div{
 html > body > section > div.carteProjets > article{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 15px;
     max-width: 250px;
     border: 2px solid #0e1557;
@@ -57,6 +63,7 @@ html > body > section > div.carteProjets > article:hover{
 
 html > body > section > div.carteProjets > article > h3{
     text-align: center;
+    font-weight: bolder;
 }
 
 html > body > section > div.carteProjets > article > p{
@@ -160,12 +167,21 @@ button:active {
     align-items: center;
     transition: background-color .3s ease;
 }
-
+.lien{
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .logo{
     width: 30px;
     height: 30px;
 }
-
+.lienLogo{
+    width: 30px;
+    height: 30px;
+}
 .socialImg{
     width: 28px;
     height: 28px;
