Update small responsive

--- a/style/Index.css
+++ b/style/Index.css
@@ -239,3 +239,25 @@ button:active {
   }
 
 /*****************************************************************************************************/
+
+@media only screen and (max-width: 600px) {
+    html > body > section > h1{
+        font-size: 3.5em;
+        margin: 0px;
+        font-weight: 700;
+    }
+    html > body > section > div > h2{
+        font-size: 1.5em;
+        margin: 0px;
+        font-weight: 900;
+    }
+    
+    html > body > section > p{
+        font-size: 1.5em;
+        margin: 0px;
+    }
+    html > body > section > div{
+        flex-direction: column;
+        gap: 25px;
+    }
+  }
