--- a/style/Contact.css
+++ b/style/Contact.css
@@ -87,3 +87,11 @@ html > body > section > h1 > a:active{
      transform: rotate(45deg) rotateX(-385deg) rotateY(385deg);
     }
 }
+@media only screen and (max-width: 600px) {
+    html > body > section > h1{
+        font-size: 1.5em;
+        margin: 0px;
+        font-weight: 600;
+        text-align: center;
+    }
+  }
